# PlasmaEngine

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CreateBuild.py  GenerateVS2019.bat  Init.bat  LICENSE.md  LICENSE.rtf  PlasmaDocker.sh  README.md  build_vs2019_ninja.bat  build_vs2019_x64.bat  build_vs2022.bat  dockerbuild.sh  dockerbuildserver.sh  index.js  package-lock.json  package.json  suppress.txt
Libraries/: CMakeLists.txt
Libraries/CodeTranslator/: CMakeLists.txt  CodeSplitWindow.cpp  CodeTranslatorCommands.cpp  CodeTranslatorStandard.hpp  ShaderTranslationDebugHelper.cpp  ShaderTranslationDebugHelper.hpp
Libraries/Common/: Algorithm.hpp  Allocator.hpp  Array.hpp  Audio.hpp  BitMath.hpp  BitStream.cpp  Block.cpp  BlockArray.hpp  BoolVector2.hpp  BuildVersion.hpp  ByteBuffer.cpp  CMakeLists.txt  CallStack.hpp  Callback.hpp  CharacterTraits.cpp  CommonForwardDeclarations.hpp  CommonStandard.hpp  Console.cpp  ContainerCommon.cpp  CrashHandler.hpp  Curve.cpp  DecomposedMatrix4.hpp  Determinism.cpp  Determinism.hpp  Diagnostic.cpp  DirectoryWatcher.cpp  EulerAngles.hpp  EulerOrder.hpp  ExecutableResource.hpp  ExternalLibrary.hpp  File.cpp  File.hpp  FileEvents.cpp  FileSystem.cpp  FixedString.hpp  ForEachRange.hpp  FpControl.hpp  GenericVector.hpp  Git.hpp  Graph.cpp  (+79 more)
Libraries/Content/: AnimationProcessor.cpp  AnimationProcessor.hpp  ArchetypeProcessor.cpp  AudioContent.cpp  AudioContent.hpp  AudioFileEncoder.cpp  AudioFileEncoder.hpp  BinaryContent.cpp  BinaryContent.hpp  BuildOptions.cpp  BuildOptions.hpp  CMakeLists.txt  ContentComposition.cpp  ContentComposition.hpp  ContentEnumerations.hpp  ContentItem.cpp  ContentLibrary.cpp  ContentStandard.cpp  ContentStandard.hpp  ContentSystem.cpp  ContentSystem.hpp  ContentUtility.cpp  CubemapProcessing.cpp  CubemapProcessing.hpp  DataContent.cpp  FileExtensionManager.cpp  GeometryContent.cpp  GeometryImporter.cpp  GeometryImporter.hpp  GeometryUtility.cpp  ImageContent.cpp  ImportOptions.cpp  ImportOptions.hpp  MeshBuilder.cpp  MeshBuilder.hpp  PhysicsMeshProcessor.hpp  PivotProcessor.hpp  RichAnimation.cpp  RichAnimation.hpp  SkeletonProcessor.cpp  (+12 more)
Libraries/Editor/: AddRemoveListBox.cpp  AddRemoveListBox.hpp  AddWindow.cpp  AddWindow.hpp  AllCommands.hpp  AnimationControls.hpp  AnimationEditor.hpp  AnimationEditorData.cpp  AnimationEditorData.hpp  AnimationGraph.cpp  AnimationScrubber.hpp  AnimationSettings.hpp  AppCommands.cpp  ArchiveProjectCommands.cpp  BackgroundTask.cpp  BackgroundTaskUi.cpp  BackgroundTaskUi.hpp  BasicGizmos.cpp  BasicGizmos.hpp  BroadPhaseEditor.cpp  BugReport.cpp  BugReport.hpp  CMakeLists.txt  ClothTools.hpp  CogCommand.cpp  CogCommand.hpp  ColorGradientEditor.hpp  ColorPicker.hpp  ColorScheme.cpp  ColorScheme.hpp  CommandSelector.hpp  ConsoleUi.cpp  ConsoleUi.hpp  ContentLogic.cpp  ContentLogic.hpp  ContentPackageImporter.hpp  ContentPackageItem.cpp  ContentPackageItem.hpp  CreationCommands.cpp  CurveEditor.cpp  (+113 more)
Libraries/Engine/: Action.hpp  ActionGenerator.hpp  ActionSystem.hpp  Animation.cpp  Animation.hpp  AnimationGraph.hpp  AnimationGraphEvents.hpp  AnimationNode.cpp  Archetype.hpp  Area.cpp  Area.hpp  AsyncProcess.cpp  BasicActions.cpp  CMakeLists.txt  Cog.cpp  Cog.hpp  CogHelpers.hpp  CogId.hpp  CogInitializer.hpp  CogMeta.cpp  CogMeta.hpp  CogMetaComposition.hpp  CogOperations.cpp  CogOperations.hpp  CogPath.cpp  CogPath.hpp  CogRestoreState.hpp  CogSelection.cpp  CogSelection.hpp  ColorGradient.cpp  Component.cpp  Component.hpp  ComponentHierarchy.hpp  ComponentMeta.cpp  Configuration.cpp  Configuration.hpp  DataSource.cpp  DataSource.hpp  DebugCommands.cpp  DebugCommands.hpp  (+76 more)
Libraries/Gameplay/: CMakeLists.txt  CameraViewport.cpp  EmscriptenExportTarget.cpp  Exporter.cpp  Exporter.hpp  GameplayStandard.hpp  GitJobs.hpp  Importer.cpp  Importer.hpp  IndexedHalfEdgeMesh.cpp  IndexedHalfEdgeMesh.hpp  MarchingCubes.hpp  MarchingSquares.cpp  MouseCapture.cpp  MouseCapture.hpp  Orientation.hpp  PathFinder.cpp  PathFinder.hpp  PathFinderGrid.cpp  PlayGame.cpp  QuickHull3DBindings.cpp  QuickHull3DBindings.hpp  RandomContext.cpp  RandomContext.hpp  Reactive.hpp  ReactiveViewport.cpp  ReactiveViewport.hpp  SplineParticles.cpp  SplineParticles.hpp  TileMap.cpp  TileMap.hpp  UnitTestSystem.cpp  WindowsExportTarget.cpp
Libraries/Geometry/: CMakeLists.txt  ClosestPoint.cpp  ConvexMeshDecomposition.cpp  ConvexMeshDecomposition.hpp  ConvexMeshShape.hpp  DebugDraw.cpp  DebugDraw.hpp  DebugDrawStack.hpp  ExtendedIntersection.cpp  ExtendedIntersection.hpp  Frustum.cpp  Geometry.cpp  GeometryStandard.cpp  GeometryStandard.hpp  Gjk.hpp  Hull2D.hpp  Mpr.cpp  ObbIntersection.cpp  Plane.hpp  PointQueries.cpp  Polygon.cpp  Polygon.hpp  QuickHull3D.cpp  Shape2D.cpp  ShapeHelpers.hpp  Shapes.cpp  Shapes.hpp  Simplex.cpp  Sphere.cpp  Sphere.hpp  ToString.cpp  ToString.hpp  TrapezoidMap.cpp  TrapezoidMap.hpp  Triangulator.cpp
Libraries/Graphics/: Atlas.hpp  CMakeLists.txt  Camera.hpp  DebugGraphical.cpp  DebugGraphical.hpp  Definition.hpp  Font.cpp  Font.hpp  FontPattern.hpp  ForwardDeclarations.hpp  GraphicsEngine.cpp  GraphicsRaycastProvider.cpp  GraphicsSpace.cpp  GraphicsSpace.hpp  GraphicsStandard.hpp  HeightMapModel.cpp  HeightMapModel.hpp  LightningFragment.cpp  LightningFragment.hpp  LightningShaderGenerator.cpp  Material.hpp  MaterialBlock.hpp  MaterialFactory.cpp  Mesh.cpp  Model.cpp  Particle.cpp  ParticleAnimators.cpp  ParticleEmitter.hpp  ParticleEmitters.hpp  ParticleSystem.cpp  ParticleSystem.hpp  PlasmaLightningShaderGlslBackend.hpp  RenderGroup.hpp  RenderSettings.cpp  RenderTarget.cpp  RenderTasks.cpp  RenderTasks.hpp  RendererThread.cpp  RendererThread.hpp  ResourceLists.cpp  (+14 more)
Libraries/Lightning/: Any.cpp  ArrayClass.hpp  CMakeLists.txt  CodeGenerator.cpp  CodeLocation.hpp  CompilationErrors.cpp  CompilationErrors.hpp  ConsoleClass.cpp  Core.cpp  DataDrivenLexer.inl  DestructibleBuffer.hpp  Documentation.hpp  ErrorDatabase.hpp  ErrorDatabaseEnum.inl  ErrorDatabaseSetup.inl  Events.hpp  ExecutableState.cpp  ExecutableState.hpp  FilePathClass.cpp  FileStreamClass.cpp  (+48 more)
(+2744 files in other folders)
