add_subdirectory(LightningCore)
add_subdirectory(LightningScript)
add_subdirectory(LightningShaders)

set_property(TARGET "LightningCore" PROPERTY FOLDER "Lightning")
set_property(TARGET "LightningScript" PROPERTY FOLDER "Lightning")
set_property(TARGET "LightningShaders" PROPERTY FOLDER "Lightning")